[package]
edition      = "2024"
name         = "enviornment_monitor"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "enviornment_monitor"
test = false
bench = false

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
esp-alloc = "0.9.0"
esp-println = { version = "0.16.1", features = ["esp32s3"] }
# for more networking protocol support see https://crates.io/crates/edge-net

embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
] }

mipidsi = "0.9.0"
embedded-hal-bus = "0.3.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
bme680 = {git = "https://github.com/marcelbuesing/bme680"}
log = "0.4.29"
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "esp32s3", "println"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
